--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynasty of Fight</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../CSS/bootstrap.css">
 </head>
 <body>
     <header>
