--- a/html/index.html
+++ b/html/index.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynasty of Fight</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../CSS/bootstrap.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
 </head>
+
 <body>
     <header>
+
         <nav class="navbar">
             <img src="../images/logo.jpg" alt="logo" class="logo">
             <ul>
                 <li>
                     <img src="" alt="">
-                    <a href="" class="nav-btn">TOP</a>
+                    <a href="#top" class="nav-btn">TOP</a>
                 </li>
                 <li>
                     <img src="" alt="">
-                    <a href="" class="nav-btn">JUNGLE</a>
+                    <a href="#jg" class="nav-btn">JUNGLE</a>
                 </li>
                 <li>
                     <img src="" alt="">
-                    <a href="" class="nav-btn">MID</a>
+                    <a href="#mid" class="nav-btn">MID</a>
                 </li>
                 <li>
                     <img src="" alt="">
-                    <a href="" class="nav-btn">ADC</a>
+                    <a href="#adc" class="nav-btn">ADC</a>
                 </li>
                 <li>
                     <img src="" alt="">
-                    <a href="" class="nav-btn">SUPORTE</a>
+                    <a href="#sup" class="nav-btn">SUPORTE</a>
                 </li>
             </ul>
         </nav>
+
     </header>
 
-    
+
 </body>
+
 </html>
