--- a/html/index.html
+++ b/html/index.html
@@ -14,32 +14,55 @@
 
         <nav class="navbar">
             <img src="../images/logo.jpg" alt="logo" class="logo">
-            <ul>
-                <li>
-                    <img src="" alt="">
-                    <a href="#top" class="nav-btn">TOP</a>
-                </li>
-                <li>
-                    <img src="" alt="">
-                    <a href="#jg" class="nav-btn">JUNGLE</a>
-                </li>
-                <li>
-                    <img src="" alt="">
-                    <a href="#mid" class="nav-btn">MID</a>
-                </li>
-                <li>
-                    <img src="" alt="">
-                    <a href="#adc" class="nav-btn">ADC</a>
-                </li>
-                <li>
-                    <img src="" alt="">
-                    <a href="#sup" class="nav-btn">SUPORTE</a>
-                </li>
-            </ul>
+
+            <div>
+                <img src="" alt="">
+                <a href="#top" class="nav-btn-top">TOP</a>
+            </div>
+            <div>
+                <img src="" alt="">
+                <a href="#jg" class="nav-btn-jg">JUNGLE</a>
+            </div>
+            <div>
+                <img src="" alt="">
+                <a href="#mid" class="nav-btn-mid">MID</a>
+            </div>
+            <div>
+                <img src="" alt="">
+                <a href="#adc" class="nav-btn-adc">ADC</a>
+            </div>
+            <div>
+                <img src="" alt="">
+                <a href="#sup" class="nav-btn-sup">SUPORTE</a>
+            </div>
+
         </nav>
 
     </header>
 
+    <div class="time">
+        <h1>Dynasty Of Fight</h1>
+    </div>
+
+    <div class="top" id="top">
+        <h1>TOP</h1>
+    </div>
+
+    <div class="jg" id="jg">
+        <h1>JUNGLER</h1>
+    </div>
+
+    <div class="mid" id="mid">
+        <h1>MID</h1>
+    </div>
+
+    <div class="adc" id="adc">
+        <h1>AD CARRY</h1>
+    </div>
+
+    <div class="sup" id="sup">
+        <h1>SUPORTE</h1>
+    </div>
 
 </body>
 
